<resources>
    <string name="app_name">Notes Pro XMLViews</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="hello">Hello.</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="sign_up_icon">Sign Up Icon</string>
    <string name="hello2">Hello.</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email_id2">Email Id</string>
    <string name="password2">Password</string>
    <string name="login2">LogIn</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_account2">Create Account</string>
    <string name="login_icon">Login Icon</string>
    <string name="notes">Notes</string>
    <string name="more_one_note">More one note</string>
    <string name="menu_button">Menu button</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="delete_note">Delete note</string>
    <string name="save_note">Save Note</string>
    <string name="add_new_note">Add New Note</string>
    <string name="edit_your_note">Edit your note</string>
    <string name="add_image">Add Image</string>
    <string name="remove_image">Remove Image</string>
    <string name="image_preview">Image preview</string>
    <string name="choose_image_source">Choose image source</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="camera_icon">Camera icon</string>
    <string name="pin_note">Pin note</string>
    <string name="unpin_note">Unpin note</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="reminder_set">Reminder: %1$s</string>
    <string name="cancel_reminder">Cancel reminder</string>
    <string name="reminder_notification_channel_id">notes_reminders</string>
    <string name="reminder_notification_channel_name">Note Reminders</string>
    <string name="reminder_notification_channel_desc">Notifications for scheduled note reminders</string>
    <string name="open_note">Open note</string>
    <string name="reminder_fired">Reminder for your note</string>
</resources>